# FastApi-Projects

./: .gitignore  pyproject.toml  requirements.txt
conventer/: main.py
